Fix height style on mobile for home page

--- a/src/styles/sections/_home.scss
+++ b/src/styles/sections/_home.scss
@@ -7,7 +7,7 @@
     background-color: rgba($color-light, 0.9);
 
     .content {
-      min-height: calc(100vh - 151px);
+      min-height: calc(100vh - 51px);
 
       .title {
         background-image: url(@/assets/images/pietro-jeng-0Sd2qqU5soQ-unsplash.jpg);
@@ -34,6 +34,7 @@
 
       > .content {
         max-width: $breakpoint-md;
+        min-height: calc(100vh - 151px);
       }
     }
   }
